# open-airbus-cockpit

./: .gitignore  01_index.md  02_contact.md  03_news.html  04_software.md  CNAME  README.md  _config.yml  construction.md  contact.md  hardware.md  index.html  index.md  params.json  software.md
oacsd/: CMakeLists.txt  ChangeLog  README.md  ReleaseNotes.md
oacsd/cmake/modules/: ConfigVisualC++Runtime.cmake  FindFSUIPC_Internal.cmake  FindMosquitto.cmake  FindSimConnect.cmake  NSIS.cmake  Testing.cmake
oacsd/flightvars/: CMakeLists.txt  FlightVars.def
oacsd/flightvars/include/flightvars/: api.h  api.i  client.h  core.h  protocol.h  protocol.inl  subscription.h  var.h
oacsd/flightvars/include/flightvars/client/: connection_manager.h  connection_state.h  errors.h  flight_vars_client.h  requests.h  subscription_db.h
oacsd/flightvars/include/flightvars/proto/: binary.h  deserial.h  errors.h  (+3 more)
oacsd/flightvars/src/: dllmain.cpp  main.cpp  module.h
oacsd/flightvars/src/conf/: exports_fsuipc.h  provider.cpp  provider.h  settings.cpp  settings.h
oacsd/flightvars/src/core/: domain.h
oacsd/flightvars/src/explorer/: main.cpp  observer.cpp  observer.h
oacsd/flightvars/src/fsuipc/: domain.cpp  domain.h
oacsd/flightvars/src/lib/: api.cpp  client.cpp  subscription.cpp
oacsd/flightvars/src/module/: api.cpp  core.cpp  dllmain.cpp  fsuipc.cpp  fsuipc.h  main.cpp  protocol.cpp  server.cpp  server.h  subscription.cpp  subscription.h
oacsd/flightvars/src/mqtt/: broker.cpp  broker.h  broker_mosquitto.cpp  broker_mosquitto.h  client.cpp  client.h  client_dummy.h  client_mosquitto.cpp  client_mosquitto.h  message.h  qos.h  topic.h
oacsd/flightvars/test/: api-test.cpp  client-itest.cpp  client-test.cpp  fake.h  fsuipc-itest.cpp  fsuipc-test.cpp  protocol-test.cpp  server-itest.cpp  subscription-test.cpp  var-test.cpp
oacsd/flightvars/test/client/: requests-test.cpp  subscription_db-test.cpp
oacsd/flightvars/test/conf/: provider-itest.cpp  provider-test.cpp
oacsd/flightvars/test/integration-test/: main.cpp
oacsd/flightvars/test/mqtt/: broker-itest.cpp  client-itest.cpp  topic-test.cpp
oacsd/flightvars/test/unit-test/: main.cpp
oacsd/fsuipc/: CMakeLists.txt
oacsd/fsuipc/include/fsuipc/: fsuipc_user.h
oacsd/fsuipc/src/: IPCuser.h  ModuleUser.c  ipc-user.h  module-user.c
oacsd/liboac/: CMakeLists.txt
oacsd/liboac-commons/: CMakeLists.txt
oacsd/liboac-commons/include/liboac/: attempt.h  buffer.h  buffer.inl  cockpit-fsuipc.h  cockpit.h  concurrency.h  endian.h  exception.h  filesystem.h  format.h  fsuipc.h  io.h  lang-utils.h  logging.h  network.h  network.inl  simconn.h  stream.h  timing.h  worker.h
oacsd/liboac-commons/src/: buffer.cpp  cockpit-fsuipc.cpp  cockpit.cpp  filesystem.cpp  fsuipc.cpp  logging.cpp  simconn.cpp  stream.cpp  timing.cpp
oacsd/liboac-commons/test/: attempt-test.cpp  buffer-test.cpp  concurrency-test.cpp  exception-test.cpp  filesystem-test.cpp  fsuipc-test.cpp  lang-utils-test.cpp  logging-itest.cpp  network-itest.cpp  network-test.cpp  simconn-itest.cpp  stream-test.cpp  timing-itest.cpp  timing-test.cpp
oacsd/liboac-commons/test/buffer/: asio_handler-test.cpp
oacsd/liboac/include/liboac/: attempt.h  buffer.h  cockpit.h  endian.h  exception.h  format.h  fsuipc.h  io.h  logging.h  network.h  simconn.h  stream.h  timing.h  worker.h
oacsd/liboac/src/: cockpit-fsuipc.cpp  filesystem.cpp  logging.cpp
oacsd/liboac/src/fsuipc/: client.cpp  local.cpp
oacsd/liboac/test/: attempt-test.cpp  buffer-test.cpp  exception-test.cpp  exception-test.i  fsuipc-test.cpp  logging-itest.cpp  network-itest.cpp
oacsd/liboac/test/buffer/: asio_handler-test.cpp
oacsd/liboac/test/integration-test/: logging-itest.h  main.cpp  simconn-itest.h  timing-itest.h
oacsd/liboac/test/network/: async_client-itest.cpp
oacsd/liboac/test/thread/: channel-test.cpp  monitor-test.cpp
oacsd/liboac/test/unit-test/: attempt-test.h  buffer-test.h  concurrency-test.h  exception-test.h  filesystem-test.h  fsuipc-test.h  main.cpp  stream-test.h  timing-test.h
oacsd/nsis/: fs-plugins.nsh  oacsd.nsh
oacsd/test-util/include/: ctrl-fcu.h  ctrl-main.h  ui-fcu.h  ui-main.h
oacsd/test-util/src/: ctrl-fcu.cpp  ctrl-main.cpp  main.cpp  ui-fcu.cpp  ui-main.cpp
oacsd/wilco-exporter/: CMakeLists.txt
oacsd/wilco-exporter/src/: dllmain.cpp  main.cpp  mapping.cpp  plugin.cpp  plugin.h  wilco-efis.cpp  wilco-efis.h  wilco-fcu.cpp  wilco-fcu.h  wilco-internal.cpp  wilco-internal.h  wilco.cpp  wilco.h
server/: CMakeLists.txt  server.pro
server/cmake/modules/: FindSimConnect.cmake  Packaging.cmake
server/include/: components.h  devices.h  events.h  exception.h  oacsp-utils.h  serial.h  test.h  types.h  ui.h
server/liboac/: CMakeLists.txt  liboac.pro
server/liboac-commons/: CMakeLists.txt
server/liboac-commons/include/: cockpit.h  exception.h  fsuipc.h  simconn.h
server/liboac-commons/include/liboac/: buffer.h  cockpit-fsuipc.h  fsuipc.h  lang-utils.h  pointer.h  simconn.h
server/liboac-commons/src/: buffer.cpp  cockpit-fsuipc.cpp  cockpit.cpp  simconn.cpp
server/liboac-commons/test/: RequestData.cpp  lang-utils-test.cpp  simconn-itest.cpp
server/liboac/include/: components.h  config.h  devices.h  events.h  exception.h  oacsp-utils.h  platform.h  serial.h  test.h  types.h
server/liboac/src/: devices.cpp  oacsp-utils.cpp  serial.cpp  test.cpp
server/nsis/: license.txt
server/src/: devices.cpp  oacsp-utils.cpp  serial.cpp  server.cpp  test.cpp  ui.cpp
server/test-util/: CMakeLists.txt  test-util.pro
server/test-util/include/: ctrl-fcu.h  ctrl-main.h  ui-fcu.h  ui-main.h
server/test-util/src/: ctrl-fcu.cpp  ctrl-main.cpp  main.cpp  ui-main.cpp
server/wilco-exporter/: CMakeLists.txt
server/wilco-exporter/src/: main.cpp  plugin.cpp  plugin.h  wilco-efis.cpp  wilco-fcu.cpp  wilco-fcu.h  wilco-internal.cpp  wilco-internal.h  wilco.cpp  wilco.h
wilco-exporter/: CMakeLists.txt  WilcoExporter.def
wilco-exporter/include/: buffer.h  exception.h  fsuipc.h  logging.h  mapping.h  wilco.h
wilco-exporter/src/: fsuipc.cpp  main.cpp  mapping.cpp  wilco.cpp
(+141 files in other folders)
